@@ -20,7 +20,7 @@ public class XMLUtil {
 
 			// 通过类名生成实例对象并将其返回
 			Class<?> c = Class.forName(cName);
-			Object obj = c.newInstance();
+			Object obj = c.getDeclaredConstructor().newInstance();
 			return obj;
 		} catch (Exception e) {
 			e.printStackTrace();
